--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 sudo: required
-language: bash
 
 cache:
   directories:
@@ -13,8 +12,16 @@ matrix:
   include:
     - env: OS='centos:7'
 
+  include:
+    - language: python
+      python: 3.6
+
+    - language: bash
+
+install:
+  - pip install tox-travis
+
 script:
-  - pip install codecov
   - wget https://webank-ai-1251170195.cos.ap-guangzhou.myqcloud.com/standalone-fate-master-1.5.0_preview.tar.gz
   - tar -xzvf  standalone-fate-master-1.5.0_preview.tar.g
   - cd standalone-fate-master-1.5.0_preview
