--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,11 @@ matrix:
     - language: bash
 
 install:
-  - pip install tox-travis
+  - pip install codecov
 
 script:
   - wget https://webank-ai-1251170195.cos.ap-guangzhou.myqcloud.com/standalone-fate-master-1.5.0_preview.tar.gz
-  - tar -xzvf  standalone-fate-master-1.5.0_preview.tar.g
+  - tar -xzvf  standalone-fate-master-1.5.0_preview.tar.gz
   - cd standalone-fate-master-1.5.0_preview
   - sed -i.bak "s/sh  service.sh/bash service.sh/g" init.sh
   - sh init.sh init
