--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ script:
   - sed -i.bak "s/sh  service.sh/bash service.sh/g" init.sh
   - sh init.sh init
   - ls -alh
+  - source bin/init_env.sh
   - bash ./python/federatedml/test/run_test.sh
 after_success:
   - conda install -c conda-forge codecov --yes
